# nmc-utils

./: .gitignore  .gitmodules  Dockerfile  Makefile  TODO  blackjack.mk  build-dpkgs-for-repo.sh  docker.mk  easynmc-core.c  easynmc-filters.c  generate-deb-info.sh  nmc-utils.doxyfile  nmctl.c  nmlog.c  nmlogd.c  nmrun.c
debian/: changelog  control  libeasynmc-dev.install  libeasynmc-examples.install  libeasynmc.install  rules  shlibs
doc/: cross-compiling  easynmc-stdio-guide.txt  getting-started.txt  kernel-driver-readme.txt
dot/: nmc-states-simplified.gv  nmc-states.gv
easynmc/: CMakeLists.txt  easynmc-io.c  pkg-config.pc.cmake  printf.cpp  startup.asm
easynmc/include/easynmc/: easynmc.mlb
host/: CMakeLists.txt  easynmc-core.c  easynmc-filters.c  nmctl.c
host/include/: easynmc.h
include/: easynmc.h
ipl/: CMakeLists.txt  Makefile  colorizer.mk  conf.mlb  ipl-k1879-debug.abs  k1879_def.mlb  k1879_init.asm  k1879_init.cfg  k1879_load.asm  mb7707_init.asm
libeasynmc-nmc/: Makefile  aura.c  colorizer.mk  easynmc-io.c  easynmc.h  main.c  platform.asm  printf.cpp  run_nmc_code.edcl  startup.asm
libeasynmc-nmc/conf/: K1879.cfg
libeasynmc-nmc/include/easynmc/: aura-exportfile.h  aura.h  easynmc.h  easynmc.mlb
nmc-examples/arguments/: Makefile  main.c
nmc-examples/aura-rpc/: K1879.cfg  Makefile  aura-exports.c  main.c
nmc-examples/hello-world/: Makefile  colorizer.mk  main.c
nmc-examples/interrupt-sender/: K1879.cfg  Makefile  colorizer.mk  easyconf.asm  main.c
nmc-examples/ledplay/: Makefile  main.c
nmc-examples/returncode/: Makefile  main.c
prebuilt-ipl/: ipl-K1879-nmc.abs
startup_code/: Makefile  k1879_init.asm  k1879_load.asm
